# slopH

./: .gitignore  BOOTSTRAP.md  CORE.md  INFRASTRUCTURE.md  INTEGER.md  MEMROY.MD  Makefile  README.md  REQUIREMENTS.md  RESEARCH_GHC_CORE.md  RESEARCH_SYNTHESIS.md  pyproject.toml
.plan/: EXECUTION.md  README.md
docs/: PRODUCT.md
examples/: README.md
idea/: ASYNC.md  AUDIT_PROFILES.md  BACKENDS.md  (+12 more)
src/sloph-python-bootstrap/: README.md  pyproject.toml
src/sloph-python-bootstrap/sloph/: __init__.py  __main__.py  _resources.py  cli.py
src/sloph-python-bootstrap/sloph/backend/: __init__.py  c11.py
src/sloph-python-bootstrap/sloph/compiler/: build.py
src/sloph-python-bootstrap/sloph/core/: __init__.py  canonical.py  diagnostics.py  evaluate.py  limits.py  model.py  parser.py  primitives.py  validate.py
src/sloph-python-bootstrap/sloph/project/: __init__.py  elaborate.py  load.py  special.py
src/sloph-python-bootstrap/sloph/syntax/: __init__.py  _integer.py  format.py  json.py  model.py  parser.py  transform.py  validate.py
src/sloph-python-bootstrap/tests/: __init__.py  test_cases.py  test_cli.py  test_core.py  test_core_library.py  test_examples.py  test_math_library.py  test_memory.py  test_os_library.py  test_platform_selection.py  test_posix_library.py  test_v1.py
src/sloph-python-bootstrap/tests/backend/: test_c11.py
src/sloph-python-bootstrap/tests/compiler/: test_build.py
src/sloph-python-bootstrap/tests/project/: test_project.py
src/sloph-python-bootstrap/tests/runners/: python.py
src/sloph-python-bootstrap/tests/syntax/: test_syntax.py
(+571 files in other folders)
