[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "sloph"
dynamic = ["version"]
description = "Experimental tools for the SlopH Core"
requires-python = ">=3.11"
license = { file = "LICENSE" }
dependencies = []

[project.scripts]
sloph = "sloph.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.dynamic]
version = { attr = "sloph.__version__" }
